# picow-setup

./: CMakeLists.txt  README.md  main.cpp  pins.hpp
